# orchids_register

./: .gitignore  .taurignore  Cargo.toml  LICENSE  README.md  test_register.bat
TurnstileSolver/: api_solver.py  requirements.txt
TurnstileSolver/tests/: test_api_solver_display.py
config/: runtime.example.yaml
docs/: github-publish-guide.md  run-build-guide.md
mail-gateway/: .env.example  requirements.txt
mail-gateway/mail_gateway/: __init__.py  app.py  config.py  run_server.py
mail-gateway/tests/: test_health_api.py  test_luckmail_provider.py  test_mail_chatgpt_uk_provider.py  test_poll_code_api.py  test_provider_registry.py  test_sqlite_store.py  (+1 more)
scripts/: build-desktop.bat  build-desktop.ps1  common.ps1  init-runtime-config.bat  init-runtime-config.ps1  run-cli-registration.bat  run-cli-registration.ps1  start-desktop-dev.ps1  start-dev-stack.bat  start-dev-stack.ps1  start-mail-gateway.ps1  start-turnstile-solver.ps1
src/: capmonster.rs  clerk.rs  cli.rs  constants.rs  desktop.rs  errors.rs  freemail.rs  http_client.rs  inbox_gateway.rs  lib.rs  main.rs  proxy_pool.rs  result_store.rs  tempmail.rs  workflow.rs
src-tauri/: Cargo.toml  PROXY_POOL_FIX.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  orchids_profile.rs  service_manager.rs  state.rs
src-tauri/src/commands/: accounts.rs  app.rs  config.rs  domains.rs  mod.rs  register.rs  services.rs
tests/: inbox_gateway.rs
ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
(+33 files in other folders)
