[workspace]
members = ["src-tauri"]
resolver = "2"

[package]
name = "orchids-auto-register"
version = "0.1.0"
edition = "2021"

[lib]
name = "orchids_core"
path = "src/lib.rs"

[[bin]]
name = "orchids-auto-register"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "cookies", "json", "rustls-tls", "socks"] }
reqwest_cookie_store = "0.8"
cookie_store = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
chrono = { version = "0.4", default-features = true }
html-escape = "0.2"
url = "2.5"
