[package]
name = "orchids-auto-register-portable"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
orchids_core = { package = "orchids-auto-register", path = ".." }
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", default-features = true }
uuid = { version = "1", features = ["v4"] }
csv = "1.3"
dirs = "5"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["blocking", "cookies", "json", "rustls-tls", "socks"] }
futures = "0.3"
regex = "1.11"
